--- a/index.css
+++ b/index.css
@@ -1,1 +1,37 @@
-index.css
+html {
+  box-sizing: border-box;
+  -ms-overflow-style: scrollbar;
+  display: flex;
+  justify-content: center;
+
+}
+body {
+  max-width: 1800px;
+  overflow: auto;
+  font-size: 1.5em;
+}
+
+h1{
+	text-align: center;
+}
+.my-container{
+	margin-top: 25px;
+	width:100%;
+	border:5px solid black;
+	display:flex;
+	justify-content: center;
+}
+.video-wrapper{
+	position:relative;
+	padding-top:25px;
+	padding-bottom:25px;
+}
+
+.slide-container{
+	margin-top: 25px;
+	width:100%;
+	border:5px solid black;
+	display:block;
+	justify-content: center;
+}
+
